Fix some layout issues

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ html {
 
 .dropdown-menu {
     transform-origin: top right;
-    transition: transform 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275), opacity 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    transition: transform 0.3s var(--smooth-spring), opacity 0.3s var(--smooth-spring);
     transform: scale(0.8);
     opacity: 0;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.175);
@@ -27,7 +27,7 @@ html {
 }
 
 .dropdown-item {
-    transition: opacity 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    transition: opacity 0.4s var(--smooth-spring);
     opacity: 0;
 }
 
@@ -65,7 +65,6 @@ html {
 #preview {
     flex: 1;
     height: 100%;
-    overflow: auto;
     padding: 0;
 }
 
